--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,24 +1,93 @@
-<nav class="navbar navbar-expand-sm bg-danger">
+<nav class="navbar navbar-expand-sm bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand text-light" href="#">Home</a>
+    <a class="navbar-brand text-dark" href="#">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Products</a>
+          <a class="nav-link text-dark" href="#">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Chat</a>
+          <a class="nav-link text-dark" class="emit_data" href="#">Chat</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<main class="d-flex justify-content-center align-items-center">
-    CUERPO
+<main class="d-flex justify-content-center align-items-center bg-dark">
+  <div class="container">
+            <div class="row">
+                <div class="col-md-12 d-flex-column text-center">
+                    <img class=" " src="img/SMASHED BABIES LOGO 4.png" width="350" />
+                    <h4>
+                        Todas las hamburguesas incluyen papas fritas!
+                    </h4>
+  <div class="card-group">
+  <div class="card">
+    <img class="card-img-top" src="img/HISTORIA ONION BABY.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Onion Baby</h5>
+      <p class="card-text">Doble carne, doble queso, mucha cebolla</p>
+      <p class="card-title">Total: $1800</p>
+      <button id="boton-vaciar" class="btn btn-primary">Agregar al carrito</button>
+  </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="img/HISTORIA MUSH BABY.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Mush Baby</h5>
+      <p class="card-text">Doble carne, muzzarella, champignones</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="img/HISTORIA CHEESE BABY.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Cheese Baby</h5>
+      <p class="card-text">Doble carne, muuucho queso</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
+
 </main>
-<footer class="bg-warning p-2 text-center">
-    PIE DE PAGINA
-</footer>
+<footer class="container-fluid color_header p-4 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <span class="letra">Todos los derechos reservados 2023 - Smashed Babies Burgers ®</span
+            >
+          </div>
+          <div class="col-md-6">
+            <p class="text-end">
+              <a href=""
+                ><img
+                  src="img/instagram.svg"
+                  alt="IG"
+                  width="30"
+                  class="padding_footer-img"
+              /></a>
+              <a href=""
+                ><img
+                  src="img/whatsapp.svg"
+                  alt="WP"
+                  width="30"
+                  class="padding_footer-img"
+              /></a>
+              <a href=""
+                ><img
+                  src="img/facebook.svg"
+                  alt="FB"
+                  width="30"
+                  class="padding_footer-img"
+              /></a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
